# carbot_inference

./: .gitignore  CMakeLists.txt  README.md  main
cmake/: CarbotInferenceConfig.cmake.in
cmake/modules/: FindDeepStream.cmake  FindTensorRT.cmake
config/: config_preprocess.txt
include/: Coms.hpp  CudaManager.hpp  InferPipelineManager.hpp  UndiscretisePredict.hpp
includes/: Coms.hpp  CudaManager.hpp  InferPipelineManager.hpp
scripts/: build.engine.bash  build.main.bash  build.model.bash
src/: CudaManager.cpp  InferPipelineManager.cpp  UndiscretisePredict.cpp  main.cpp
test/: main.cpp  run_model.cpp
